feat: implement play functionality and UI for crossword game

--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
             <button id="preview-btn" class="btn btn-primary">
               Vorschau erstellen
             </button>
+            <a href="#" id="play-btn" class="btn btn-success btn-disabled">
+              🎮 Spielen
+            </a>
             <button id="generate-btn" class="btn btn-success" disabled>
-              PDF generieren
+              📄 PDF generieren
             </button>
           </div>
 
